theme_academy_clean: Fixed: Graded task activity module content isn't horizontally aligned with completion icons like labels.

--- a/theme/academy_clean/style/istart.css
+++ b/theme/academy_clean/style/istart.css
@@ -9,7 +9,7 @@
 }
 .istartaction {
     padding: 4px 0 4px 58px;
-    margin: 1rem 0 0 0;
+    margin: 0 0 1rem 0;
     min-height: 46px;
     background-repeat: no-repeat;
     background-position: 0 4px;
